# kalimentor

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: lint.yml  test.yml
config/: default.yaml  hooks.example.yaml  mcp.example.yaml
docs/: architecture.md  defensive-mode.md  hooks.md  mcp.md  providers.md  tools.md
src/: cli.py
src/core/: agent.py  context.py  executor.py  hooks.py  llm.py  mcp.py  memory.py  models.py  parser.py  planner.py  prompts.py  session.py  stream.py
src/core/tools/: __init__.py  bash_tool.py  defense.py  file_tools.py  findings_tool.py  memory_tool.py  plan_tool.py  registry.py  security_tools.py  subagent.py
src/modules/: __init__.py  methodologies.py
src/ui/: __init__.py  app.py  tmux.py  widgets.py
templates/: KALIMENTOR.md
tests/: test_agent_loop.py  test_agent_streaming.py  test_agent_terminal_analysis.py  test_context.py  test_executor_yolo.py  test_llm_backends.py  test_llm_streaming.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_hooks.py  test_phase4_mcp_errors.py  test_phase4_ui_slash.py  test_planner_analysis.py  test_risk_confirm_screen.py  test_status_bar_yolo.py  test_stream.py  test_tools.py  test_ui_callback.py  test_widgets.py
