[project]
name = "kalimentor"
version = "0.2.0"
description = "Agentic cybersecurity learning framework for Kali Linux"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "rich>=13.0",
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "prompt_toolkit>=3.0",
    "aiofiles>=23.0",
    "textual>=0.60",
    "textual-terminal>=0.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.40", "google-genai>=1.0", "openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
kalimentor = "src.cli:app"
km = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
